extra character removed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
      <!-- Video. -->
      <section class="video" id="video">
-          <h1>What is Discovering Eternity</h1>>
+          <h1>What is Discovering Eternity</h1>
           <div class="video-responsive">
                <iframe width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
