test images size

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           crossorigin="anonymous">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
           crossorigin="anonymous">
+          <link rel="stylesheet" href="main.css">
      <link rel="apple-touch-icon" href="apple-touch-icon.png" type="image/x-icon">
      <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
      <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -116,24 +117,24 @@
           <div class="container">
                <div class="row">
                     <div class="col-sm-3">
-                         <img class="img-fluid rounded-circle" src="https://via.placeholder.com/250" alt="Nation 1">
+                         <img class="img-fluid rounded-circle" src="images/north.jpg" alt="North">
                          <h3>Nation 1</h3>
+                         <p>North</p>
+                    </div>
+                    <div class="col-sm-3">
+                         <img class="img-fluid rounded-circle" src="images/east.jpg" alt="East">
+                         <h3>Nation 2</h3>
                          <p>East</p>
                     </div>
                     <div class="col-sm-3">
-                         <img class="img-fluid rounded-circle" src="https://via.placeholder.com/250" alt="Nation 2">
-                         <h3>Nation 2</h3>
+                         <img class="img-fluid rounded-circle" src="images/south.jpg" alt="South">
+                         <h3>Nation 3</h3>
                          <p>South</p>
                     </div>
                     <div class="col-sm-3">
-                         <img class="img-fluid rounded-circle" src="https://via.placeholder.com/250" alt="Nation 3">
-                         <h3>Nation 3</h3>
-                         <p>West</p>
-                    </div>
-                    <div class="col-sm-3">
-                         <img class="img-fluid rounded-circle" src="https://via.placeholder.com/250" alt="Nation 4">
+                         <img class="img-fluid rounded-circle" src="images/west.jpg" alt="West">
                          <h3>Nation 4</h3>
-                         <p>North</p>
+                         <p>West</p>
                     </div>
                </div>
           </div>
@@ -155,37 +156,35 @@
                topography.
 
                The group composed of a representative from other regions of the world, each of them a hand chosen
-               talent.
+               talent
                being
                picked among many to be part of this group. With that honor, came a sense of superiority. All of them
                had an
                attitude, and their personality constantly clashed on a daily basis. Their speciality consist of a
                scout, a
-               foreman, a recorder, her the reporter.
+               foreman, a navagator, and her the record keeper.
 
                Viv the other girl from the group came from the southern region. While they were both female, the
                similarities end
                there. Where as Kari preferred planing for her action, Viv base her on actions on instincts without any
                basis
                or
-               reasoning. What makes Viv hard to deal with is her spontaneity and selfishness. As she lead them down
+               reasoning. What makes Viv hard to deal with is her spontaneity and selfishness. Just a week ago Viv lead them down
                the
                path
                that was treacherous to all but most lithe human, namely only her. “A short cut” she casually remarked
                as she
                leap
-               from one foothold to another as Kari “almost slip” far too many times to her liking. In the end Kari and
+               from one foothold to another as Kari “almost slip” far too many times to any person's liking. In the end Kari and
                the
-               other
-               two member demanded that Viv find them a safer route, but not before receiving the look fro Viv. The one
-               you
-               receive when someone sees you as incompetent. But what really draw the line, was when Viv decided to
+               others demanded that Viv find them a safer route, but not before receiving the look from Viv. It was the look
+               you give to other people when you see them as incompetent. But what really draw the line between the two young woman, was when Viv decided to
                make
                Kari her
                mark. Kari had a necklace given to her by mother on her birthday. Viv and her cat-like eyes on it, the
                moment
                they
-               met, just a couple days ago, the necklace vanish during her sleep. With only the four of them in the
+               met. Just a couple days ago, the necklace vanish during her sleep. With only the four of them in the
                middle
                of
                nowhere, it narrows down the list of suspect to three with only one of them coming from a nation where
@@ -217,9 +216,9 @@
                all she saw was a overbearingly man, whose only methodology was using force to get obedience. It seem
                that
                today
-               his energy was focus on the final member Garret for avoiding.
+               his energy was focus on the final member Garret for avoiding his duty.
 
-               Garret, the representative from the north, who just shrug when Arnold growered him on, as if he were a
+               Garret, the representative from the East, just shrug when Arnold growered him on, as if he were a
                mutt
                barking at him. Garret was the lazy one, who. There is in fact such a thing as being too passive. Kari
                could
@@ -229,10 +228,10 @@
                were
                that of a hermit.
 
-               All three of them had an ego, and Kari knows that she had one also. Arrogant, disobedient, and obsessive
+               All three of them had an ego, and Kari knows that she had one also. Arrogant, judgimental, and obsessive
                is
                what
-               her colleague had described non too discreetly behind her back. She is aware of her flaw, and was trying
+               her colleague had described her non too discreetly behind her back. She is aware of her flaw, and was trying
                to
                repress her nature for the sake of teamwork. That however could not be applied to the rest of the team
                mates.
@@ -240,7 +239,7 @@
                each passing day with only each other as company. She was convinced that one of them was going to
                smoother
                them in
-               their sleep and call it an accident. If this continues she may be the one that does to smothering.
+               their sleep and call it an accident. If this continues she may be the one that does the smothering.
           </p>
      </section>
      <!-- Author -->
