--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           crossorigin="anonymous">
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
           crossorigin="anonymous">
-          <link rel="stylesheet" href="main.css">
+     <link rel="stylesheet" href="main.css">
      <link rel="apple-touch-icon" href="apple-touch-icon.png" type="image/x-icon">
      <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
      <link rel="icon" href="/favicon.ico" type="image/x-icon">
@@ -53,14 +53,14 @@
      </nav>
 
      <!-- Video. -->
+     <div>
      <section class="video" id="video">
-          <h1>What is Discovering Eternity</h1>
-          <div class="video-responsive">
-               <iframe width="560" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+          <h1>Background music for your enjoyment</h1>
+          <div id="video" class="featured-video embed-responsive embed-responsive-16by9">
+               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/URxC75G3nJI"></iframe>
           </div>
      </section>
-
+</div>
      <!-- Synopsis -->
      <section class="story" id="story">
           <h1>Learn about Discovering Eternity</h1>
@@ -169,16 +169,20 @@
                there. Where as Kari preferred planing for her action, Viv base her on actions on instincts without any
                basis
                or
-               reasoning. What makes Viv hard to deal with is her spontaneity and selfishness. Just a week ago Viv lead them down
+               reasoning. What makes Viv hard to deal with is her spontaneity and selfishness. Just a week ago Viv lead
+               them down
                the
                path
                that was treacherous to all but most lithe human, namely only her. “A short cut” she casually remarked
                as she
                leap
-               from one foothold to another as Kari “almost slip” far too many times to any person's liking. In the end Kari and
+               from one foothold to another as Kari “almost slip” far too many times to any person's liking. In the end
+               Kari and
                the
-               others demanded that Viv find them a safer route, but not before receiving the look from Viv. It was the look
-               you give to other people when you see them as incompetent. But what really draw the line between the two young woman, was when Viv decided to
+               others demanded that Viv find them a safer route, but not before receiving the look from Viv. It was the
+               look
+               you give to other people when you see them as incompetent. But what really draw the line between the two
+               young woman, was when Viv decided to
                make
                Kari her
                mark. Kari had a necklace given to her by mother on her birthday. Viv and her cat-like eyes on it, the
@@ -231,7 +235,8 @@
                All three of them had an ego, and Kari knows that she had one also. Arrogant, judgimental, and obsessive
                is
                what
-               her colleague had described her non too discreetly behind her back. She is aware of her flaw, and was trying
+               her colleague had described her non too discreetly behind her back. She is aware of her flaw, and was
+               trying
                to
                repress her nature for the sake of teamwork. That however could not be applied to the rest of the team
                mates.
@@ -242,21 +247,24 @@
                their sleep and call it an accident. If this continues she may be the one that does the smothering.
           </p>
      </section>
-     <!-- Author -->
-     <section class="author" id="author">
-          <h1>About the Author</h1>
-          <div class="float-left">
-               <img class="img-fluid rounded-circle" src="https://via.placeholder.com/250" alt="Author">
-          </div>
-          James Chen is a creative content specialist who is studying web development at Seattle University. He has
-          played a
-          lot of role playing games and has read a lot of fantasy book that he can more or less pull ideas out of the
-          air
-          and create content for anything. Please feel free to share the contents of the first chapter and if you find
-          it
-          interesting please support James and his work.
-     </section>
 
+     <!-- Author -->
+          <section class="author" id="author">
+               <h1>About the Author</h1>
+               <div class="float-left">
+                    <img class="img-fluid rounded-circle" src="/images/me.jpg" alt="Author">
+               </div>
+               James Chen is a creative content specialist who is studying web development at Seattle University. He
+               has
+               played a
+               lot of role playing games and has read a lot of fantasy book that he can more or less pull ideas out of
+               the
+               air
+               and create content for anything. Please feel free to share the contents of the first chapter and if you
+               find
+               it
+               interesting please support James and his work.
+          </section>
      <!-- Contact Form -->
      <div class="row">
           <div class="col-lg-8 mb-4">
@@ -268,13 +276,6 @@
                               <input type="text" class="form-control" id="name" required
                                    data-validation-required-message="Please enter your name.">
                               <p class="help-block"></p>
-                         </div>
-                    </div>
-                    <div class="control-group form-group">
-                         <div class="controls">
-                              <label>Phone Number:</label>
-                              <input type="tel" class="form-control" id="phone" required
-                                   data-validation-required-message="Please enter your phone number.">
                          </div>
                     </div>
                     <div class="control-group form-group">
