text-speech, parrallax, nav color fix

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
      <link rel="apple-touch-icon" href="apple-touch-icon.png" type="image/x-icon">
      <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
      <link rel="icon" href="/favicon.ico" type="image/x-icon">
+     <script src="text-speech.js"></script>
 </head>
 
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
      <!-- Navigation bar -->
-     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+     <nav class="navbar fixed-top navbar-expand-lg navbar-dark fixed-top" style="background-color:rgba(0, 0, 0, 0.75);">
           <div class="container">
                <a class="navbar-brand" href="index.html">Discovering Eternity</a>
                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -52,17 +53,24 @@
           </div>
      </nav>
 
+     <header>
+          <h2>“If the book is true, it will find an audience that is meant to read it.”</h1>
+               <h3> — Wally Lamb</h3>
+     </header>
+
+     <div class="parallax-1"></div>
+
      <!-- Video. -->
-     <div>
      <section class="video" id="video">
           <h1>Background music for your enjoyment</h1>
           <div id="video" class="featured-video embed-responsive embed-responsive-16by9">
                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/URxC75G3nJI"></iframe>
           </div>
      </section>
-</div>
+
      <!-- Synopsis -->
      <section class="story" id="story">
+          <article>
           <h1>Learn about Discovering Eternity</h1>
           <p>The world has always been composed of four region. The supreme militant-driven nation to the west, the
                traditional
@@ -77,14 +85,18 @@
                one
                of
                their fellow members dead, with her and two other explorers as the prime suspect.</p>
+               </article>
      </section>
 
      <!-- Customer testimonials -->
+     <center>
      <p>Finally, an author that is not boring… - teenage kid
           <br />
           A riveting story that will captivate you! - book critic
           <br />
           I want to know what happens next! - reader</p>
+</center>
+     <div class="parallax-1"></div>
 
      <!-- Character & World -->
      <section class="intro" id="intro">
@@ -113,6 +125,7 @@
                     </div>
                </div>
           </div>
+
           <h1>Where they came from</h1>
           <div class="container">
                <div class="row">
@@ -140,133 +153,181 @@
           </div>
           </div>
      </section>
+
+     <div class="parallax-2"></div>
+
      <!-- Chapter -->
+
      <section class="content" id="content">
-          <h1>Chapter 1</h1>
-          <p>They were a bad match. Kari had knew that when she first the other members of her group from other regions
-               for a
-               long expedition of exploring the unknown jungle that flourished in the deep crater of the land. The
-               crater
-               was in
-               the middle of each of their regions untamed and untouched by any hint of civilization. It had been a
-               month
-               since
-               they have explored the region together and they have yet yield any significant discovery except
-               extending the
-               topography.
-
-               The group composed of a representative from other regions of the world, each of them a hand chosen
-               talent
-               being
-               picked among many to be part of this group. With that honor, came a sense of superiority. All of them
-               had an
-               attitude, and their personality constantly clashed on a daily basis. Their speciality consist of a
-               scout, a
-               foreman, a navagator, and her the record keeper.
-
-               Viv the other girl from the group came from the southern region. While they were both female, the
-               similarities end
-               there. Where as Kari preferred planing for her action, Viv base her on actions on instincts without any
-               basis
-               or
-               reasoning. What makes Viv hard to deal with is her spontaneity and selfishness. Just a week ago Viv lead
-               them down
-               the
-               path
-               that was treacherous to all but most lithe human, namely only her. “A short cut” she casually remarked
-               as she
-               leap
-               from one foothold to another as Kari “almost slip” far too many times to any person's liking. In the end
-               Kari and
-               the
-               others demanded that Viv find them a safer route, but not before receiving the look from Viv. It was the
-               look
-               you give to other people when you see them as incompetent. But what really draw the line between the two
-               young woman, was when Viv decided to
-               make
-               Kari her
-               mark. Kari had a necklace given to her by mother on her birthday. Viv and her cat-like eyes on it, the
-               moment
-               they
-               met. Just a couple days ago, the necklace vanish during her sleep. With only the four of them in the
-               middle
-               of
-               nowhere, it narrows down the list of suspect to three with only one of them coming from a nation where
-               kleptomania
-               as a common trait among their people.
-
-               Arnold the representative from the west was the foreman and in charge of supplies, and begun to order
-               the
-               other
-               three members as if they were in the military corp. What he failed to understand was none of them came
-               from
-               military, and none of them respond well with bellowing and spit droplets landing on their face when he
-               came
-               to
-               close to their face. Now that Kari thought about it perhaps all this barking and chest pounding was
-               needed
-               for
-               him, as Arnold had never resorted to physicals force to her. But it was certainly not by choice, he was
-               given
-               specific instructions that he was not to harm any of the members to risk international conflict. They
-               all
-               were
-               instructed the same. Whenever Kari questioned his methodology, she could see it took every strain of
-               muscle
-               on his
-               body to hold back the urge to resort to violence, which she no doubt is second nature to him. Kari was
-               not
-               afraid,
-               all she saw was a overbearingly man, whose only methodology was using force to get obedience. It seem
-               that
-               today
-               his energy was focus on the final member Garret for avoiding his duty.
-
-               Garret, the representative from the East, just shrug when Arnold growered him on, as if he were a
-               mutt
-               barking at him. Garret was the lazy one, who. There is in fact such a thing as being too passive. Kari
-               could
-               not
-               figure out what the lanky man’s thoughts were. Garret was indeed a savant at mapping, but with social
-               decorum
-               were
-               that of a hermit.
-
-               All three of them had an ego, and Kari knows that she had one also. Arrogant, judgimental, and obsessive
-               is
-               what
-               her colleague had described her non too discreetly behind her back. She is aware of her flaw, and was
-               trying
-               to
-               repress her nature for the sake of teamwork. That however could not be applied to the rest of the team
-               mates.
-               With
-               each passing day with only each other as company. She was convinced that one of them was going to
-               smoother
-               them in
-               their sleep and call it an accident. If this continues she may be the one that does the smothering.
-          </p>
+          <div class=buttons>
+               <center>
+                    <button id=play></button> &nbsp;
+                    <button id=pause></button> &nbsp;
+                    <button id=stop></button>
+               </center>
+          </div>
+          <article>
+               <h1>Chapter 1</h1>
+               <p>They were a bad match. Kari had knew that when she first the other members of her group from other
+                    regions
+                    for a
+                    long expedition of exploring the unknown jungle that flourished in the deep crater of the land. The
+                    crater
+                    was in
+                    the middle of each of their regions untamed and untouched by any hint of civilization. It had been
+                    a
+                    month
+                    since
+                    they have explored the region together and they have yet yield any significant discovery except
+                    extending the
+                    topography.
+                    The group composed of a representative from other regions of the world, each of them a hand chosen
+                    talent
+                    being
+                    picked among many to be part of this group. With that honor, came a sense of superiority. All of
+                    them
+                    had an
+                    attitude, and their personality constantly clashed on a daily basis. Their speciality consist of a
+                    scout, a
+                    foreman, a navagator, and her the record keeper.
+               </p>
+                    <br />
+                  <p>Viv the other girl from the group came from the southern region. While they were both female, the
+                    similarities end
+                    there. Where as Kari preferred planing for her action, Viv base her on actions on instincts without
+                    any
+                    basis
+                    or
+                    reasoning. What makes Viv hard to deal with is her spontaneity and selfishness. Just a week ago Viv
+                    lead
+                    them down
+                    the
+                    path
+                    that was treacherous to all but most lithe human, namely only her. “A short cut” she casually
+                    remarked
+                    as she
+                    leap
+                    from one foothold to another as Kari “almost slip” far too many times to any person's liking. In
+                    the end
+                    Kari and
+                    the
+                    others demanded that Viv find them a safer route, but not before receiving the look from Viv. It
+                    was the
+                    look
+                    you give to other people when you see them as incompetent. But what really draw the line between
+                    the two
+                    young woman, was when Viv decided to
+                    make
+                    Kari her
+                    mark. Kari had a necklace given to her by mother on her birthday. Viv and her cat-like eyes on it,
+                    the
+                    moment
+                    they
+                    met. Just a couple days ago, the necklace vanish during her sleep. With only the four of them in
+                    the
+                    middle
+                    of
+                    nowhere, it narrows down the list of suspect to three with only one of them coming from a nation
+                    where
+                    kleptomania
+                    as a common trait among their people.</p>
+                    <br />
+                    <p>Arnold the representative from the west was the foreman and in charge of supplies, and begun to
+                    order
+                    the
+                    other
+                    three members as if they were in the military corp. What he failed to understand was none of them
+                    came
+                    from
+                    military, and none of them respond well with bellowing and spit droplets landing on their face when
+                    he
+                    came
+                    to
+                    close to their face. Now that Kari thought about it perhaps all this barking and chest pounding was
+                    needed
+                    for
+                    him, as Arnold had never resorted to physicals force to her. But it was certainly not by choice, he
+                    was
+                    given
+                    specific instructions that he was not to harm any of the members to risk international conflict.
+                    They
+                    all
+                    were
+                    instructed the same. Whenever Kari questioned his methodology, she could see it took every strain
+                    of
+                    muscle
+                    on his
+                    body to hold back the urge to resort to violence, which she no doubt is second nature to him. Kari
+                    was
+                    not
+                    afraid,
+                    all she saw was a overbearingly man, whose only methodology was using force to get obedience. It
+                    seem
+                    that
+                    today
+                    his energy was focus on the final member Garret for avoiding his duty.</p>
+                    <br />
+                    <p>Garret, the representative from the East, just shrug when Arnold growered him on, as if he were a
+                    mutt
+                    barking at him. Garret was the lazy one, who. There is in fact such a thing as being too passive.
+                    Kari
+                    could
+                    not
+                    figure out what the lanky man’s thoughts were. Garret was indeed a savant at mapping, but with
+                    social
+                    decorum
+                    were
+                    that of a hermit.</p>
+                    <br />
+                    <p>All three of them had an ego, and Kari knows that she had one also. Arrogant, judgimental, and
+                    obsessive
+                    is
+                    what
+                    her colleague had described her non too discreetly behind her back. She is aware of her flaw, and
+                    was
+                    trying
+                    to
+                    repress her nature for the sake of teamwork. That however could not be applied to the rest of the
+                    team
+                    mates.
+                    With
+                    each passing day with only each other as company. She was convinced that one of them was going to
+                    smoother
+                    them in
+                    their sleep and call it an accident. If this continues she may be the one that does the smothering.
+               </p>
+          </article>
      </section>
 
+     <div class="parallax-2"></div>
+
      <!-- Author -->
-          <section class="author" id="author">
-               <h1>About the Author</h1>
-               <div class="float-left">
+     <section class="author" id="author">
+          <h1>About the Author</h1>
+          <div class="row">
+               <div class="col-sm-3">
                     <img class="img-fluid rounded-circle" src="/images/me.jpg" alt="Author">
                </div>
-               James Chen is a creative content specialist who is studying web development at Seattle University. He
-               has
-               played a
-               lot of role playing games and has read a lot of fantasy book that he can more or less pull ideas out of
-               the
-               air
-               and create content for anything. Please feel free to share the contents of the first chapter and if you
-               find
-               it
-               interesting please support James and his work.
-          </section>
+               <div class="col-sm-9">
+                    James Chen is a creative content specialist who is studying web development at Seattle University.
+                    He
+                    has
+                    played a
+                    lot of role playing games and has read a lot of fantasy book that he can more or less pull ideas
+                    out of
+                    the
+                    air
+                    and create content for anything. Please feel free to share the contents of the first chapter and if
+                    you
+                    find
+                    it
+                    interesting please support James and his work.
+               </div>
+     </section>
+
      <!-- Contact Form -->
      <div class="row">
+          <center>
           <div class="col-lg-8 mb-4">
                <h1>Send James a Message</h1>
                <form name="sentMessage" id="contactForm" novalidate>
@@ -294,9 +355,10 @@
                     </div>
                     <div id="success"></div>
                     <!-- For success/fail messages -->
-                    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send Message</button>
+                    <button type="submit" class="btn btn-primary" id="sendMessageButton">Send</button>
                </form>
           </div>
+          </center>
      </div>
      <!-- Share link -->
      <h2>Share this website</h2>
@@ -311,7 +373,7 @@
      </div>
      <!-- Footer -->
      <footer>
-          <footer class="py-5 bg-dark">
+          <footer class="py-3" style="background-color:rgba(0, 0, 0, 0.75);">
                <div class="container">
                     <div class="footer-flex">
                          <p class="footer-item-flex text-white">Copyright ©2018 Discovering Eternity</p>
